<resources>
    <string name="app_name">Mood App</string>

    <string name="androidx_startup">androidx.startup</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>

    <string name="close_drawer">Close navigation menu</string>
    <string name="close_sheet">Close sheet</string>
    <string name="default_error_message">Invalid input</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="how_are_you">How are you?</string>
    <string name="i_am_happy">I\'m Happy</string>
    <string name="i_am_nervous">I\'m nervous</string>
    <string name="i_am_sad">I\'m Sad</string>
    <string name="i_am_sleepy">I\'m Sleepy</string>
    <string name="i_m_angry">I\'m angry</string>
    <string name="i_m_annoyed">I\'m annoyed</string>
    <string name="i_m_calm">I\'m Calm</string>
    <string name="i_m_hungry">I\'m hungry</string>
    <string name="i_m_sick">I\'m Sick</string>

    <string name="mood_activity">Mood Activity</string>
    <string name="mood_guessing">Mood Guessing</string>

    <string name="nav_app_bar_navigate_up_description">Navigate up</string>
    <string name="nav_app_bar_open_drawer_description">Open navigation drawer</string>
    <string name="navigation_menu">Navigation menu</string>
    <string name="not_selected">Not selected</string>
    <string name="off">Off</string>
    <string name="on">On</string>

    <string name="privacy_policy">Privacy Policy</string>
    <string name="search_menu_title">Search</string>
    <string name="selected">Selected</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="tab">Tab</string>
</resources>