<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/topi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        android:elevation="10dp"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="start"
            android:text="Settings"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp">

            <ImageView
                android:id="@+id/privacy"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:src="@drawable/ic_policy"
                android:tint="@color/white"/>

            <ImageView
                android:id="@+id/donation"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:src="@drawable/ic_baseline_thumb_up_24" />

        </LinearLayout>


    </RelativeLayout>


    <TextView
        android:id="@+id/textViewHowAreYour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/topi"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_25sdp"
        android:text="@string/how_are_you"
        android:textColor="@color/black"
        android:textSize="@dimen/_30ssp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewHowAreYour"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/carViewHappyCard"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_8sdp"
                app:cardCornerRadius="@dimen/_18sdp"
                app:cardElevation="@dimen/_8sdp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_65sdp"
                        android:layout_height="@dimen/_65sdp"
                        android:src="@drawable/happy" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/i_am_happy"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15ssp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewSadCard"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_8sdp"
                app:cardCornerRadius="@dimen/_18sdp"
                app:cardElevation="@dimen/_8sdp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_65sdp"
                        android:layout_height="@dimen/_65sdp"
                        android:src="@drawable/sad" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/i_am_sad"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15ssp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewSleepyCard"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_8sdp"
                app:cardCornerRadius="@dimen/_18sdp"
                app:cardElevation="@dimen/_8sdp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_65sdp"
                        android:layout_height="@dimen/_65sdp"
                        android:src="@drawable/sleep" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/i_am_sleepy"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15ssp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewNervousCard"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_120sdp"

                android:layout_gravity="center"
                android:layout_margin="@dimen/_8sdp"
                app:cardCornerRadius="@dimen/_18sdp"
                app:cardElevation="@dimen/_8sdp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_65sdp"
                        android:layout_height="@dimen/_65sdp"
                        android:src="@drawable/nervous" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/i_am_nervous"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15ssp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewCalmCard"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_120sdp"

                android:layout_gravity="center"
                android:layout_margin="@dimen/_8sdp"
                app:cardCornerRadius="@dimen/_18sdp"
                app:cardElevation="@dimen/_8sdp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_65sdp"
                        android:layout_height="@dimen/_65sdp"
                        android:src="@drawable/calm" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/i_m_calm"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15ssp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewSickCard"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_120sdp"

                android:layout_gravity="center"
                android:layout_margin="@dimen/_8sdp"
                app:cardCornerRadius="@dimen/_18sdp"
                app:cardElevation="@dimen/_8sdp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_65sdp"
                        android:layout_height="@dimen/_65sdp"
                        android:src="@drawable/sick" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/i_m_sick"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15ssp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewAnnoyedCard"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_120sdp"

                android:layout_margin="@dimen/_8sdp"
                app:cardCornerRadius="@dimen/_18sdp"
                app:cardElevation="@dimen/_8sdp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_65sdp"
                        android:layout_height="@dimen/_65sdp"
                        android:src="@drawable/annoyed" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/i_m_annoyed"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15ssp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewAngryCard"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_120sdp"

                android:layout_gravity="center"
                android:layout_margin="@dimen/_8sdp"
                app:cardCornerRadius="@dimen/_18sdp"
                app:cardElevation="@dimen/_8sdp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_65sdp"
                        android:layout_height="@dimen/_65sdp"
                        android:src="@drawable/angry" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/i_m_angry"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15ssp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewHungryCard"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_8sdp"
                app:cardCornerRadius="@dimen/_18sdp"
                app:cardElevation="@dimen/_8sdp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_65sdp"
                        android:layout_height="@dimen/_65sdp"
                        android:src="@drawable/hungry" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/i_m_hungry"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15ssp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
